--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "url": "https://github.com/miguelcobain/hapi-boilerplate/issues"
   },
   "dependencies": {
+    "boom": "^2.6.1",
     "config": "^1.8.1",
-    "good": "^5.0.0-rc1",
+    "good": "^5.1.1",
     "good-console": "^2.1.0",
-    "hapi": "^8.0.0",
-    "pg": "^3.6.1",
+    "hapi": "^8.1.0",
+    "pg": "^3.6.3",
     "require-directory": "^2.0.0",
-    "sequelize": "^2.0.0-rc2"
+    "sequelize": "^2.0.0-rc7"
   },
   "devDependencies": {
     "lab": "^4.7.0",
